public class Gerente extends Funcionario {
  public Gerente(Area a) {
    super(a);
  }
}
